# senbonzakura

./: .gitignore  CHANGELOG.md  README.md  THIRD-PARTY-NOTICES.md  pyproject.toml
docs/: architecture.md
man/: senbonzakura.1
src/senbonzakura/: __init__.py  cli.py  coherence.py  crashsafe.py  metrics.py  resources.py  score.py
tests/: conftest.py  test_abliterator.py  test_adversarial.py  test_arch.py  test_coherence.py  test_crashsafe.py  test_metrics.py  test_offload.py  test_pure_math.py  test_resources.py  test_score.py
tools/: audit_token_positions.py
