[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "senbonzakura"
version = "0.2.0"
description = "Multi-direction refusal abliteration for transformer language models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Daniel Iwugo" }]
keywords = ["abliteration", "refusal-direction", "interpretability", "ai-safety", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.2",
  "transformers>=4.44",
  "datasets>=2.0",
  "optuna>=3.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
# 4-bit loading for the head-to-head bench and low-VRAM runs.
quant = ["bitsandbytes>=0.43"]
dev = ["pytest>=7", "build>=1.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://git.olympus.hq/daniel/senbonzakura"

[project.scripts]
# `senbonzakura --help` after `pip install .`  (also works: `python -m senbonzakura`)
senbonzakura = "senbonzakura.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/man/man1" = ["man/senbonzakura.1"]
